--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -1,4 +1,23 @@
-# Main entrypoint of the workflow. 
-# Please follow the best practices: 
-# https://snakemake.readthedocs.io/en/stable/snakefiles/best_practices.html,
-# in particular regarding the standardized folder structure mentioned there. 
+# inspired by: https://github.com/snakemake-workflows/rna-seq-star-deseq2/blob/master/workflow/Snakefile
+
+from snakemake.utils import min_version
+
+##### set minimum snakemake version #####
+min_version("8.27.0")
+
+##### setup report #####
+configfile: "config/config.yaml"
+
+##### load rules #####
+include: "rules/common.smk"
+include: "rules/pymob_infer.smk"
+include: "rules/likelihood_landscape.smk"
+
+rule all:
+    input:
+        get_final_output()
+
+# TODO: Next steps:
+# - Implement SLURM Profile: https://snakemake.readthedocs.io/en/stable/executing/cli.html#profiles
+# - Export as a github repository: https://snakemake.readthedocs.io/en/stable/snakefiles/deployment.html
+# - Further generalize by using more config options
