--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,3 +1,5 @@
+case_study: tktd_rna_pulse
+
 scenarios:
   - rna_pulse_5_substance_specific
   - rna_pulse_5_substance_independent_rna_protein_module
