--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,11 +1,10 @@
-case_study: tktd_rna_pulse
+case_study: ctest
 
 scenarios:
-  - rna_pulse_5_substance_specific
-  - rna_pulse_5_substance_independent_rna_protein_module
+  - test
 
 likelihood_landscapes:
-  run: False
+  run: True
   n_grid_points: 100
   n_vector_points: 50
   std_dev: 2.0
