--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -12,6 +12,7 @@ configfile: "config/config.yaml"
 include: "rules/common.smk"
 include: "rules/pymob_infer.smk"
 include: "rules/likelihood_landscape.smk"
+include: "rules/report.smk"
 
 rule all:
     input:
